cabal-version:      2.4
name:               aoc21
version:            0.1.0.0
license:            MIT
author:             dfireBird

library
    exposed-modules:
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11
    build-depends:
        base ^>=4.14.3.0,
        containers ^>= 0.6.5.1,
        split ^>= 0.2.3.4,
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc21
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        containers ^>= 0.6.5.1,
        aoc21
    hs-source-dirs:   app
    default-language: Haskell2010
